cmake_minimum_required (VERSION 2.8.8)

# -----------------------------------------------
# Policies
# -----------------------------------------------

# -----------------------------------------------
# Includes
# -----------------------------------------------

# -----------------------------------------------
# Sources
# -----------------------------------------------

# -----------------------------------------------
# Binary
# -----------------------------------------------

# -----------------------------------------------
# Dependencies
# -----------------------------------------------

# -----------------------------------------------
# Linked libraries
# -----------------------------------------------

# -----------------------------------------------
# Benchmark specific
# -----------------------------------------------

# -----------------------------------------------
# Directories
# -----------------------------------------------

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/caches)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine)